[tool.poetry]
name = "shoutout-py"
version = "0.1.0"
description = "Realtime messaging with Redis PUB/SUB."
authors = ["Alexander van Zyl <vanzyl.alex@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alexvanzyl/shoutout"
keywords = [
    "websocket",
    "redis",
    "fastapi",
    "pubsub",
    "realtime"
]
packages = [
    { include = "shoutout" },
]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
